--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,33 +1,43 @@
 <div class="home-page">
-  <br>
-  <h1 class="text-center">Latest client updates</h1>
-  <br>
-  <br>
+  <h1 class="text-center">Recent activity</h1>
   <div class="col-sm-4">
-    <ul class="list-group">
-      <li class="list-group-item active">
-        <h4 class="list-group-item-heading">Most recent</h4>
-      </li>
+    <div>
+      <h1 class="text-muted text-center"><span class="glyphicon glyphicon-signal"></span></h1>
+    </div>
+    <h4 class="text-muted text-center">Client updates</h4>
+    <div class="recent-column">
       <% @updates.each do |update| %>
-        <li class="list-group-item">
-          <div class="row">
-            <div class="col-sm-3">
-              <% if update.client.profile_image? %>
-                <%= image_tag update.client.profile_image.url, class: 'img-circle img-responsive' %>
-              <% else %>
-                <%= image_tag(('client_default_profile.jpg'), class: 'img-circle img-responsive') %>
-              <% end %>
-            </div>
-            <div class="col-sm-9">
-              <p><%= link_to update.client.full_name, client_path(update.client) %></p>
-              <small><%= format_date(update.date) %></small>
-            </div>
-          </div>
-        </li>
+        <h4><%= link_to update.client.full_name, client_path(update.client) %></h4>
+        <small><%= format_date(update.date) %></small>
+        <hr>
       <% end %>
-    </ul>
+    </div>
   </div>
-  <div class="col-sm-8">
-    <%= render 'shared/update_loop' %>
+  <div class="col-sm-4">
+    <div>
+      <h1 class="text-muted text-center"><span class="glyphicon glyphicon-pencil"></span></h1>
+    </div>
+    <h4 class="text-muted text-center">Staff posts</h4>
+    <div class="recent-column">
+      <% @posts.each do |post| %>
+        <h4><%= link_to post.title, post_path(post) %></h4>
+        <small>By <%= post.author %></small> | 
+      <small><%= format_date(post.created_at) %></small>
+        <hr>
+      <% end %>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div>
+      <h1 class="text-muted text-center"><span class="glyphicon glyphicon-comment"></span></h1>
+    </div>
+    <h4 class="text-muted text-center">Comments</h4>
+    <div class="recent-column">
+      <% @comments.each do |comment| %>
+        <p><i class="fa fa-lg fa-quote-left text-muted" aria-hidden="true"></i><%= preview(comment.body, 15) %></p>
+        <p><small><%= time_ago_in_words(comment.created_at) %> ago by <%= comment.author %> on <%= link_to comment.post.title, post_path(comment.post) %></small></p>
+        <hr>
+      <% end %>
+    </div>
   </div>
 </div>
