--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -57,6 +57,12 @@ HOME PAGE
   box-shadow: inset 0px 0px 7px #dadada;
   border-radius: 4px;
 }
+.row.site-links {
+}
+
+.site-link {
+  
+}
 
 /*
 ==================
