--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -37,7 +37,7 @@
             <hr>
           </div>
         </div>
-      <%# end %>
+      <% end %>
     </div>
   </div>
   <div class="col-sm-4">
