--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,9 +31,8 @@
             <% end %>
           </div>
           <div class="col-xs-9">
-            <h4>(Temp disabled)</h4>
-            <h4><%#= link_to update.client.full_name, client_path(update.client) %></h4>
-            <small><%#= format_date(update.date) %></small>
+            <h4><%= link_to update.client.full_name, client_path(update.client) %></h4>
+            <small><%= format_date(update.date) %></small>
             <hr>
           </div>
         </div>
