updated home format

--- a/app/views/shared/_nav_aside.html.erb
+++ b/app/views/shared/_nav_aside.html.erb
@@ -1,6 +1,6 @@
-<ul>
-  <li><%= link_to "Clients", clients_path %></li>
-  <li><%= link_to "Coaches", coaches_path %></li>
-  <li><%= link_to "Posts", posts_path %></li>
-  <li><%= link_to "Updates", updates_path %></li>
-</ul>
+<div class="side-nav text-center">
+  <p class="site-link"><%= link_to "Staff blog", posts_path %></p> | 
+  <p class="site-link"><%= link_to "Client updates", updates_path %></p> | 
+  <p class="site-link"><%= link_to "All clients", clients_path %></p> | 
+  <p class="site-link"><%= link_to "Coaches", coaches_path %></p>
+</div>
