--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -64,19 +64,15 @@ HOME PAGE
 .row.site-links {
 }
 
-.site-link a {
-      text-shadow: 0 1px 0 #fff;
-    background-image: linear-gradient(to bottom, #fff 0, #f1f1f1 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe0e0e0', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-    background-repeat: repeat-x;
-    border: 1px solid gray;
-    border-color: #dbdbdb;
-    padding: 0.5em 1em;
-    border-color: #e9e9e9;
-    border-radius: 2px;
+.side-nav {
+  background: #f5f5f5;
+  padding: 1em;
+  border-bottom: 1px solid #ccc;
+  .site-link {
+    display: inline-block;
+    margin: 0 1em;
+  }
 }
-
 
 
 /*
