--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,11 @@
     <div class="navbar-wrapper">
       <%= render 'layouts/header' %>
     </div>
-    <div id="main-wrapper">
-      <div class="container">
-        <%= render 'shared/flash_message' %>
-        <%= yield %>
-        <%= debug(params) if Rails.env.development? %>
-      </div>
+    <%= render 'shared/flash_message' %>
+    <%= render 'shared/nav_aside' %>
+    <div class="container">
+      <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
     </div>
   </body>
 </html>
