--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,7 @@
 <h4>Discussion</h4>
 <% @comments.each do |comment| %>
 <p><b><%= comment.author %> </b><span class="text-muted"><%= time_ago_in_words(comment.created_at) %> ago</span></p>
-<p><%= comment.body %> </p>
+<p><%= simple_format(comment.body) %> </p>
 <hr>
 <% end %>
 
